[workspace]
members = [
    "aoc2021",
    "aoc2022",
    "aoc2023",
    "aoc2024"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["PikminGuts92"]
edition = "2021"

[workspace.dependencies]
criterion = "0.5.1" # dev
csv = "1.3"
itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8"
rstest = "0.18.2" # dev
