[package]
name = "aoc2021"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
csv = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "advent_benchmark"
harness = false

[lib]
bench = false