[package]
name = "aoc2022"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
csv = { workspace = true }
itertools = { workspace = true }
nom = { workspace = true }
rayon = { workspace = true }
take-until = "0.1.0"

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }